--- a/case1/ws_jfk_txt.html
+++ b/case1/ws_jfk_txt.html
@@ -19,7 +19,7 @@
    <title>Rhetoric in the United States: JFK Inaugural Address (1961)</title>
    <link href="ws_base.css" rel="stylesheet" />
    <link href="ws_styles.css" rel="stylesheet" />
-   <link href="ws_media_txt.css" rel="stylesheet" />
+   <link href="ws_media.css" rel="stylesheet" />
 </head>
 
 <body>
