--- a/case4/rnt_poetry_txt.html
+++ b/case4/rnt_poetry_txt.html
@@ -37,6 +37,8 @@
       </header>
 
       <figure>
+            <iframe width="790" height="444" src="https://www.youtube.com/embed/o1bfQWy8o08" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <figcaption>Robert Frost reads <cite>The Road Not Taken</cite></figcaption>
       </figure>
 
@@ -70,7 +72,12 @@
 
          <section class="poem">
             <h2>Fire and Ice</h2>
-
+            <audio controls>
+               <source src="rnt_fireice.mp3" type="audio/mp3" />               
+               <source src="rnt_fireice.ogg" type="audio/ogg" />
+               <embed src="rnt_fireice.mp3" width="250" height="50" controller="yes" autoplay="no" showcontrols="yes" autostart="no" />
+               <p><em>To play this audio clip, your browser needs to support HTML5.</em></p>
+            </audio>
             <p>
                Some say the world will end in fire,<br />
                Some say in ice.<br />
@@ -86,7 +93,11 @@
 
          <section class="poem">
             <h2>Devotion</h2>
-
+            <audio controls>
+               <source src="rnt_devotion.mp3" type="audio/mp3" />               
+               <source src="rnt_devotion.ogg" type="audio/ogg" />
+               <embed src="rnt_devotion.mp3" width="250" height="50" controller="yes" autoplay="no" showcontrols="yes" autostart="no" />
+               <p><em>To play this audio clip, your browser needs to support HTML5.</em></p>
             <p>
                The heart can think of no devotion<br />
                Greater than being shore to the ocean&mdash;<br />
