--- a/case3/paa_game.html
+++ b/case3/paa_game.html
@@ -7,8 +7,8 @@
       Case Problem 3
 
       Pixal Arts and Entertainment
-      Author: 
-      Date:   
+      Author: Elijah Collins
+      Date:   12/17/19
 
       Filename:   pa_game.html
 
